# rust_lambdas_example

./: .gitignore  Cargo.toml  Makefile  README.md  samconfig.toml  template.yaml
src/: good_bye.rs  hello.rs
